--- a/SERVERcar/vercel.json
+++ b/SERVERcar/vercel.json
@@ -1,16 +1,15 @@
 {
- "version": 2,
  "builds": [
   {
-   "src": "app.js",
-   "use": "@vercel/node",
-   "config": { "includeFiles": ["dist/**"] }
+   "src": "./app.js",
+   "use": "@vercel/node"
+   
   }
  ],
  "routes": [
   {
    "src": "/(.*)",
-   "dest": "app.js"
+   "dest": "./app.js"
   }
  ]
 }
