--- a/SERVERcar/package.json
+++ b/SERVERcar/package.json
@@ -2,9 +2,11 @@
   "name": "servercourse",
   "version": "1.0.0",
   "main": "app.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
+
   },
   "author": "",
   "license": "ISC",
@@ -23,4 +25,9 @@
     "nodemailer": "^7.0.5",
     "razorpay": "^2.9.6"
   }
+
+
 }
+
+
+
